# Propensity-Score-B

./: .gitignore  S&D_FEB2026.xlsx  baseline immediateVsDelayed.py  main.py  pyproject.toml  sample.xlsx
data/: baseline.xlsx  sample.xlsx  ~$sample.xlsx
scripts/: baseline.py  baseline_table.py  cancer_table.py  complications.py  post-op_table.py  propensity.py  risk_ratio.py  table8.py
src/: baseline.py  utils.py
src/propensity_score_matching/: utils.py
